package com.programacaoiii.assistencia_tecnica.controladores;

import java.util.Map;

import com.programacaoiii.assistencia_tecnica.modelos.entidades.Peca;


public class EstoqueController {
	private Map<Peca, Integer> pecasDisponiveis;
	
	public void verPecas() {
		
	}
	
	public void adicionarPeca(Peca peca, int quantidade) {
		
	}
	
	public void removerPeca(Peca peca, int quantidade) {
		
	}
	
	public void verificarDisponibilidade(Peca peca) {
		
	}
}
